# rincon

./: .env  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  clippy.toml  docker-compose.yml  rustfmt.toml
arangodb_aql/: Cargo.toml
arangodb_aql/src/: lib.rs
arangodb_aql/src/aql/: methods.rs  types.rs
arangodb_aql/src/cursor/: methods.rs  types.rs  types_tests.rs
arangodb_aql/tests/: aql_api.rs  cursor_api.rs
arangodb_client/: Cargo.toml
arangodb_client/src/: lib.rs
arangodb_client/src/admin/: methods.rs  types.rs
arangodb_client/src/collection/: methods.rs
arangodb_client/src/database/: methods.rs
arangodb_client/src/document/: methods.rs  mod.rs  types.rs  types_tests.rs
arangodb_client/src/graph/: methods.rs  types.rs
arangodb_client/src/index/: methods.rs  types.rs
arangodb_client/src/user/: methods.rs  types.rs  types_tests.rs
arangodb_client/tests/: admin_api.rs  collection_api.rs  database_api.rs  document_api.rs  graph_api.rs  index_api.rs  log4rs.yml  user_api.rs
arangodb_connector/: Cargo.toml
arangodb_connector/src/: connection.rs  datasource.rs  lib.rs
arangodb_connector/src/authentication/: methods.rs  types.rs
arangodb_connector/tests/: authentication_api.rs  connection.rs
arangodb_core/: Cargo.toml
arangodb_core/src/: lib.rs
arangodb_core/src/api/: auth.rs  query.rs  types_tests.rs
arangodb_core/src/arango/: error_code.rs  protocol.rs
arangodb_session/: Cargo.toml
arangodb_session/src/: lib.rs
arangodb_test_helper/: Cargo.toml
arangodb_test_helper/src/: lib.rs
docs/: arangodb_rest_api_methods.md  crate_structure.md
rincon/: Cargo.toml  README.md
rincon/src/: lib.rs
rincon/tests/: version_numbers.rs
rincon_aql/: Cargo.toml  README.md
rincon_aql/src/: ast.rs  ctx.rs  lib.rs  types.rs
rincon_aql/src/aql/: types.rs
rincon_aql/src/cursor/: types.rs  types_tests.rs
rincon_aql/src/dsl/: mod.rs  tests.rs
rincon_aql/tests/: aql_api.rs  cursor_api.rs  version_numbers.rs
rincon_client/: Cargo.toml  README.md
rincon_client/src/: build.rs  lib.rs  prelude.rs  user_agent.rs
rincon_client/src/admin/: methods.rs  mod.rs  types.rs
rincon_client/src/aql/: methods.rs  mod.rs  types.rs
rincon_client/src/auth/: methods.rs  mod.rs  types.rs
rincon_client/src/collection/: methods.rs  mod.rs  types.rs
rincon_client/src/cursor/: methods.rs  mod.rs  types.rs  types_tests.rs
rincon_client/src/cursor/types/: mod.rs  tests.rs
rincon_client/src/database/: methods.rs  mod.rs  prelude.rs  types.rs
rincon_client/src/document/: methods.rs  mod.rs  types.rs  types_tests.rs
rincon_client/src/document/types/: mod.rs  tests.rs
rincon_client/src/graph/: methods.rs  mod.rs  types.rs
rincon_client/src/index/: methods.rs  mod.rs  types.rs  types_tests.rs
rincon_client/src/index/types/: mod.rs  tests.rs
rincon_client/src/user/: methods.rs  mod.rs  types.rs  types_tests.rs
rincon_client/src/user/types/: mod.rs  tests.rs
rincon_client/tests/: admin_api.rs  admin_methods.rs  aql_api.rs  aql_methods.rs  authentication_api.rs  authentication_methods.rs  collection_api.rs  collection_methods.rs  cursor_api.rs  cursor_methods.rs  database_api.rs  database_methods.rs  document_api.rs  document_methods.rs  graph_api.rs  graph_methods.rs  index_api.rs  index_methods.rs  user_api.rs  user_methods.rs
rincon_connector/: Cargo.toml  README.md
rincon_connector/src/: connection.rs  datasource.rs  http.rs  lib.rs
rincon_connector/src/authentication/: types.rs
rincon_connector/src/http/: mod.rs  tests.rs
rincon_connector/tests/: authentication_api.rs  connection.rs
rincon_core/: Cargo.toml  README.md
rincon_core/src/: datasource.rs  lib.rs
rincon_core/src/api/: auth.rs  connector.rs  datasource.rs  error.rs  method.rs  mod.rs  query.rs  query_tests.rs  statement.rs  types.rs  user_agent.rs
rincon_core/src/api/query/: mod.rs  tests.rs
rincon_core/src/api/types/: mod.rs  tests.rs
rincon_core/src/api/user_agent/: mod.rs  tests.rs
rincon_core/src/arango/: error_code.rs  mod.rs  protocol.rs
rincon_core/src/arango/protocol/: mod.rs  tests.rs
rincon_session/: Cargo.toml  README.md
rincon_session/src/: arango_session.rs  async.rs  collection_session.rs  cursor_session.rs  database_session.rs  edge_collection_session.rs  graph_session.rs  lib.rs  session.rs  sync.rs  vertex_collection_session.rs
rincon_session/tests/: arango_session.rs  database_session.rs  log4rs.yml
rincon_session_async/: Cargo.toml  README.md
rincon_session_async/src/: async.rs  lib.rs
rincon_session_async/tests/: arango_session.rs  database_session.rs
rincon_test_helper/: Cargo.toml  README.md
rincon_test_helper/src/: lib.rs
src/: api.rs  arango.rs  connection.rs  consts.rs  database.rs  datasource.rs  lib.rs  query.rs  statement.rs
src/admin/: methods.rs  types.rs
src/api/: error_code.rs  method.rs  mod.rs  query.rs  types.rs
src/api/method/: error_code.rs  mod.rs
src/aql/: methods.rs  types.rs
src/arango/: mod.rs  protocol.rs  protocol_tests.rs
src/authentication/: methods.rs  types.rs
src/collection/: methods.rs  mod.rs  types.rs
src/cursor/: methods.rs  types.rs  types_tests.rs
src/database/: methods.rs  types.rs
src/document/: methods.rs  mod.rs  types.rs  types_tests.rs
src/graph/: methods.rs  types.rs
src/index/: methods.rs  types.rs  types_tests.rs
src/user/: methods.rs  mod.rs  tests.rs  types.rs  types_tests.rs
tests/: admin_api.rs  aql_api.rs  authentication_api.rs  collection_api.rs  connection.rs  cursor_api.rs  database_api.rs  document_api.rs  graph_api.rs  index_api.rs  log4rs.yml  user_api.rs  version_numbers.rs
tests/test_fixture/: mod.rs
