[package]
name = "arangodb-rust-driver"
version = "0.1.0"
authors = ["Harald Maida <harald.maida@innoave.com>"]
description = "A typesafe and fast driver for ArangoDB"
repository = "https://github.com/innoave/arangodb-rust-driver"
readme = "README.md"
keywords = ["database", "driver", "typesafe"]
categories = ["database"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
futures = "0.1"
hyper = "0.11"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.5"

[dev-dependencies]
quickcheck = "0.4"
