[package]
name = "arangodb-rust-driver"
version = "0.1.0"
authors = ["Harald Maida <harald.maida@innoave.com>"]
description = "A typesafe and fast client for ArangoDB"
repository = "https://github.com/innoave/arangodb-rust-driver"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"
license-file = "LICENSE"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "arangodb_client"

[dependencies]
futures = "0.1"
hyper = "0.11"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.5"

[dev-dependencies]
quickcheck = "0.4"
