[package]
name = "arangodb_connector"
version = "0.1.0"  # remember to update html_root_url
description = "Implements the transport layer for the ArangoDB Rust Driver"
authors = ["Harald Maida <haraldmaida@innoave.com>"]
repository = "https://github.com/innoave/arangodb-rust-driver"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/arangodb-rust-driver" }
appveyor = { repository = "innoave/arangodb-rust-driver" }
codecov = { repository = "innoave/arangodb-rust-driver" }

[dependencies]
arangodb_core = { path = "../arangodb_core" }
futures = "0.1"
hyper = "0.11"
hyper-timeout = "0.1"
hyper-tls = "0.1"
log = "0.3"
native-tls = "0.1"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.6"

[dev-dependencies]
arangodb_test_helper = { path = "../arangodb_test_helper" }
#quickcheck = "0.4"
dotenv = "0.10"
log4rs = "0.7"
version-sync = "0.4"
