[package]
name = "rincon"
version = "0.1.0"  # remember to update html_root_url
description = "An ArangoDB driver for Rust"
authors = ["Harald Maida"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon"
readme = "../README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[dependencies]

[dev-dependencies]
version-sync = "0.5"
