[package]
name = "rincon"
version = "0.1.0"  # remember to update html_root_url
description = "An ArangoDB driver for Rust"
authors = ["haraldmaida"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon"
readme = "../README.md"
keywords = ["nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
codecov = { repository = "innoave/rincon" }

[dependencies]

[dev-dependencies]
rincon_core = { version = "0.1", path = "../rincon_core" }
rincon_connector = { version = "0.1", path = "../rincon_connector" }
rincon_session = { version = "0.1", path = "../rincon_session" }
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
version-sync = "0.5"
