[package]
name = "rincon_aql"
version = "0.1.0"  # remember to update html_root_url
description = "A typesafe AQL builder for ArangoDB"
authors = ["haraldmaida"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon_aql"
readme = "README.md"
keywords = ["nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"
publish = false

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[dependencies]
rincon_core = { version = "0.1", path = "../rincon_core" }

[dev-dependencies]
version-sync = "0.5"
