[package]
name = "rincon_client"
version = "0.1.0"  # remember to update html_root_url
description = "A typesafe client for the ArangoDB Rest API"
authors = ["haraldmaida"]
homepage = "https://github.com/innoave/rincon"
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon_client"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[features]
default = ["mmfiles"]
cluster = []
enterprise = []
mmfiles = []
rocksdb = []

[dependencies]
rincon_core = { version = "0.1", path = "../rincon_core" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
rincon_connector = { version = "0.1", path = "../rincon_connector" }
rincon_test_helper = { version = "0.1", path = "../rincon_test_helper" }
tokio-core = "0.1"
version-sync = "0.5"

[package.metadata.docs.rs]
no-default-features = true
features = [
    "mmfiles",
    "rocksdb",
    "cluster",
    "enterprise",
]
