[package]
name = "rincon_connector"
version = "0.1.0"  # remember to update html_root_url
description = "Implements the transport layer for the ArangoDB driver"
authors = ["Harald Maida <haraldmaida@innoave.com>"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon_connector"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[dependencies]
rincon_core = { path = "../rincon_core" }
failure = "0.1"
futures = "0.1"
hyper = "0.11"
hyper-timeout = "0.1"
hyper-tls = "0.1"
log = "0.4"
native-tls = "0.1"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.6"

[dev-dependencies]
rincon_test_helper = { path = "../rincon_test_helper" }
#quickcheck = "0.5"
dotenv = "0.10"
log4rs = "0.8"
version-sync = "0.5"
