[package]
name = "rincon_connector"
version = "0.1.0"  # remember to update html_root_url
description = "Implements the transport layer for the ArangoDB driver"
authors = ["haraldmaida"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon_connector"
readme = "README.md"
keywords = ["nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[dependencies]
rincon_core = { version = "0.1", path = "../rincon_core" }
futures = "0.1"
hyper = "0.11"
hyper-timeout = "0.1"
hyper-tls = "0.1"
log = "0.4"
native-tls = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.7"

[dev-dependencies]
dotenv = "0.11"
log4rs = "0.8"
version-sync = "0.5"
