[package]
name = "rincon_core"
version = "0.1.0"  # remember to update html_root_url
description = "Core lib for the ArangoDB driver"
authors = ["Harald Maida <haraldmaida@innoave.com>"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon_core"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[dependencies]
failure = "0.1"
futures = "0.1"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
#quickcheck = "0.5"
version-sync = "0.5"
