[package]
name = "rincon_core"
version = "0.1.0"  # remember to update html_root_url
description = "Core lib for the ArangoDB driver"
authors = ["haraldmaida"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon_core"
homepage = "https://github.com/innoave/rincon"
readme = "README.md"
keywords = ["nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
codecov = { repository = "innoave/rincon" }

[dependencies]
failure = "0.1"
futures = "0.1"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"

[dev-dependencies]
version-sync = "0.5"
