[package]
name = "rincon_session"
version = "0.1.0"  # remember to update html_root_url
description = "A session managed client API for the ArangoDB driver"
authors = ["haraldmaida"]
repository = "https://github.com/innoave/rincon"
documentation = "https://docs.rs/rincon_session"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[features]
default = ["mmfiles"]
cluster = []
enterprise = []
mmfiles = []
rocksdb = []

[dependencies]
rincon_core = { version = "0.1", path = "../rincon_core" }
rincon_client = { version = "0.1", path = "../rincon_client" }
futures = "0.1"
serde = "1.0"
tokio-core = "0.1"

[dev-dependencies]
rincon_connector = { version = "0.1", path = "../rincon_connector" }
rincon_test_helper = { version = "0.1", path = "../rincon_test_helper" }
hamcrest = "0.1"
version-sync = "0.5"

[package.metadata.docs.rs]
no-default-features = true
features = [
    "mmfiles",
    "rocksdb",
    "cluster",
    "enterprise",
]
