[package]
name = "rincon_test_helper"
version = "0.1.0"  # remember to update html_root_url
description = "Helper crate for integration tests with an ArangoDB server"
authors = ["Harald Maida <haraldmaida@innoave.com>"]
repository = "https://github.com/innoave/arangodb-rust-driver"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/arangodb-rust-driver" }
appveyor = { repository = "innoave/arangodb-rust-driver" }
codecov = { repository = "innoave/arangodb-rust-driver" }

[dependencies]
rincon_core = { path = "../rincon_core" }
rincon_connector = { path = "../rincon_connector" }
rincon_client = { path = "../rincon_client" }
dotenv = "0.10"
log = "0.3"
log4rs = "0.7"
tokio-core = "0.1"

[dev-dependencies]
version-sync = "0.5"
