[package]
name = "rincon_test_helper"
version = "0.1.0"  # remember to update html_root_url
description = "Helper crate for integration tests with an ArangoDB server"
authors = ["Harald Maida"]
repository = "https://github.com/innoave/rincon"
readme = "README.md"
keywords = ["arangodb", "aql", "nosql", "database", "client", "driver", "typesafe"]
categories = ["database"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "innoave/rincon" }
appveyor = { repository = "innoave/rincon" }
codecov = { repository = "innoave/rincon" }

[dependencies]
rincon_core = { path = "../rincon_core" }
rincon_connector = { path = "../rincon_connector" }
rincon_client = { path = "../rincon_client" }
dotenv = "0.10"
log4rs = "0.8"
tokio-core = "0.1"

[dev-dependencies]
version-sync = "0.5"
